--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: content-box;
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background-image: url(./assets/FondoDePantalla.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#principal {
+  background-image: url(./assets/ComidaPeruana.png);
+}
