--- a/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.html
+++ b/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.html
@@ -27,7 +27,7 @@
     </mat-card>
   </div>
 
-  <div class="contenedor2">
+  <div class="contenedor">
     <mat-card>
       <mat-card-content class="tc">
         <img class="imgcenter" src="/assets/rest2.png" alt="restaurante2" width="640" height="371">
@@ -46,7 +46,7 @@
     </mat-card>
   </div>
 
-  <div class="contenedor3">
+  <div class="contenedor">
     <mat-card>
       <mat-card-content class="tc">
         <img class="imgcenter" src="/assets/rest3.png" alt="restaurante3" width="550" height="390">
@@ -67,7 +67,7 @@
 <br><br>
 <br><br>
 <div class="contenedor-secundario">
-  <div class="contenedor4">
+  <div class="contenedor">
     <mat-card>
       <mat-card-content class="tc">
         <img class="imgcenter" src="/assets/rest4.png" alt="restaurante4" width="640" height="360">
@@ -86,7 +86,7 @@
     </mat-card>
   </div>
 
-  <div class="contenedor5">
+  <div class="contenedor">
     <mat-card>
       <mat-card-content class="tc">
         <img class="imgcenter" src="/assets/rest5.png" alt="restaurante5" width="640" height="371">
@@ -105,7 +105,7 @@
     </mat-card>
   </div>
 
-  <div class="contenedor6">
+  <div class="contenedor">
     <mat-card>
       <mat-card-content class="tc">
         <img class="imgcenter" src="/assets/rest6.png" alt="restaurante6" width="550" height="390">
