--- a/src/app/components/tours/pages/tour-list/tour-list.component.html
+++ b/src/app/components/tours/pages/tour-list/tour-list.component.html
@@ -13,6 +13,7 @@
     <input type="text" class="search-input" placeholder="Food Tour">
     <select class="search-select">
       <option value="duration">Duración</option>
+      <option value="alfabeth">Alfabetico</option>
     </select>
     <button class="search-button">Buscar</button>
   </div>
