--- a/src/app/components/tours/pages/tour-payment/tour-payment.component.html
+++ b/src/app/components/tours/pages/tour-payment/tour-payment.component.html
@@ -62,5 +62,5 @@
 </body>
 <footer>
   <button mat-stroked-button [routerLink]="'/tour-list'" routerLinkActive="active" class="boton" style="color:white;">Volver</button>
-  <button mat-stroked-button [routerLink]="'/tour-payment-confirm'" routerLinkActive="active" class="boton" style="color:white;">Reserva ahora</button>
+  <button mat-stroked-button [routerLink]="'/tour-payment-process'" routerLinkActive="active" class="boton" style="color:white;">Reserva ahora</button>
 </footer>
