--- a/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.css
+++ b/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.css
@@ -1,21 +1,46 @@
-body {
-  font-family: 'Open Sans', sans-serif;
-  height: auto;
-}
 .container {
-  padding: 20px 40px 20px 40px;
-  text-align: center;
-}
-.title {
-  font-size: 3rem;
-  font-weight: 700;
-  letter-spacing: 4px;
-  margin-bottom: 10px;
-}
-.info-payment {
   display: flex;
-  justify-content: left;
+  justify-content: center;
+  background-color: #e1e1e1;
 }
-.payment{
+.info-payment{
+  text-align: center;
 
+  align-items: center;
+  height: auto;
+  color: black;
+}
+.text{
+  font-size: 1.5em;
+  padding: 1px;
+}
+.image{
+  padding: 10px;
+  border-radius: 10px;
+}
+.boton{
+  background-color: #e82574;
+  border-radius: 5px;
+  color: white;
+  padding: 5px 10px 5px 10px;
+  font-size: 1.14rem;
+}
+.title1{
+  font-size: 4em;
+  font-weight: bold;
+  padding: 0.5em;
+}
+.title2{
+  font-size: 1.5em;
+  font-weight: bold;
+  background-color: #e1e1e1;
+  padding: 7px;
+  border-radius: 5px;
+}
+.total{
+  font-size: 1.5em;
+  font-weight: bold;
+  background-color: #e1e1e1;
+  padding: 7px;
+  border-radius: 5px;
 }
