--- a/src/app/components/tours/pages/tour-payment/tour-payment.component.css
+++ b/src/app/components/tours/pages/tour-payment/tour-payment.component.css
@@ -5,6 +5,7 @@ body{
 .container {
   padding: 20px 40px 20px 40px;
   text-align: center;
+  color: white;
 }
 
 .first-block {
@@ -76,6 +77,10 @@ body{
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+
+.choose-time-title{
+  color: black;
 }
 
 .second-block{
