--- a/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.css
+++ b/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.css
@@ -1,10 +1,6 @@
 .mat-spacer {
   flex: 1 1 auto;
 }
-.mat-toolbar {
-  background-color: #545454;
-  color: white;
-}
 .titulo{
   text-align: center;
   height: 80px;
@@ -18,6 +14,7 @@
 }
 .contenedor-secundario {
   display: flex;
+  margin-top: 10em;
 }
 .contenedor {
   width:570px;
