--- a/src/app/components/profile/components/edit-profile/edit-profile.component.css
+++ b/src/app/components/profile/components/edit-profile/edit-profile.component.css
@@ -4,17 +4,12 @@
 .mat-form-field {
   width: 400px;
 }
-button{
+.button{
+  font-size: 17px;
   margin-bottom: 50px;
 }
-b{
-  font-size: 20px;
-  margin-bottom: 5px;
-  display: block;
-}
-p{
+.b{
   font-size: 17px;
-  margin-bottom: 20px;
 }
 .container{
   color: white;
