--- a/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.css
+++ b/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.css
@@ -1,16 +1,11 @@
 .mat-spacer {
   flex: 1 1 auto;
 }
-.mat-toolbar {
-  background-color: #545454;
-  color: white;
-}
 .titulo{
   text-align: center;
-  height: 90px;
+  height: 80px;
   font-weight: revert;
-  font-size: 80px;
-  margin-top: 30px;
+  font-size: 70px;
   color: white;
 }
 
@@ -19,16 +14,17 @@
 }
 .contenedor-secundario {
   display: flex;
+  margin-top: 10em;
 }
 .contenedor {
-  width:670px;
-  height:690px;
+  width:570px;
+  height:580px;
   margin-left:  50px;
   button{
-    height:90px;
-    width:300px;
+    height:60px;
+    width:200px;
     background-color:#E82574;
-    font-size:40px;
+    font-size:30px;
     color:white;
     margin-left:80px;
     border-radius: 04%;
@@ -40,11 +36,11 @@
 
 .tc{
   h1{
-    font-size: 60px;
+    font-size: 45px;
     font-weight: initial;
   }
   h2{
-    font-size: 30px;
+    font-size: 20px;
   }
   background-color: #545454;
   color:white;
@@ -64,14 +60,15 @@
 .back{
   display: flex;
   margin-left:20px;
+  margin-top: 30px;
   button{
-    height:90px;
-    width:200px;
+    height:70px;
+    width:150px;
     background-color:#E82574;
     font-size:40px;
     color:white;
   }
   img{
-    margin-left:2040px;
+    margin-left:1580px;
   }
 }
