--- a/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.html
+++ b/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.html
@@ -8,115 +8,36 @@
 <br>
 <h1 class="titulo">Restaurants</h1>
 <div class="contenedor-principal">
-  <div class="contenedor">
+  <div class="contenedor" *ngFor="let restaurant of restaurants$ | async">
     <mat-card>
       <mat-card-content class="tc">
-        <img class="imgcenter" src="/assets/rest1.png" alt="restaurante1" width="640" height="360">
+        <img class="imgcenter" [src]="restaurant.image" [alt]="restaurant.title" width="540" height="347">
         <br><br>
-        <h1>Matria Restaurant</h1>
+        <h1>{{ restaurant.title }}</h1>
         <br>
-        <h2>Te sorprenderemos con nuestros propios alimentos innovadores y orgánicos de varias zonas del Perú. También tenemos dietas vegetarianas.</h2>
+        <h2>{{ restaurant.description }}</h2>
         <br><br>
         <div class="botones">
-          <button mat-flat-button>Book Now</button>
-          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="100" height="100" (click)="cambiarImagen($event)">
-        </div>
-
-      </mat-card-content>
-
-    </mat-card>
-  </div>
-
-  <div class="contenedor">
-    <mat-card>
-      <mat-card-content class="tc">
-        <img class="imgcenter" src="/assets/rest2.png" alt="restaurante2" width="640" height="371">
-        <br><br>
-        <h1>Awicha</h1>
-        <br>
-        <h2>Vive la experiencia de comer a las afueras en una casa barranca de Lima. Sumérgete en esta aventura natural.</h2>
-        <br><br><br>
-        <div  class="botones">
-          <button mat-flat-button>Book Now</button>
-          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="100" height="100" (click)="cambiarImagen($event)">
-        </div>
-
-      </mat-card-content>
-
-    </mat-card>
-  </div>
-
-  <div class="contenedor">
-    <mat-card>
-      <mat-card-content class="tc">
-        <img class="imgcenter" src="/assets/rest3.png" alt="restaurante3" width="550" height="390">
-        <br><br>
-        <h1>Maras Restaurant</h1>
-        <br>
-        <h2>Ofrecemos comida peruana moderna, con sabores típicos y sensaciones nuevas en el público.</h2>
-        <br><br>
-        <div class="botones">
-          <button mat-flat-button>Book Now</button>
-          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="100" height="100" (click)="cambiarImagen($event)">
+          <button mat-flat-button (click)="redirectToBooking(restaurant.bookingLink)">Book Now</button>
+          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="70" height="70" (click)="cambiarImagen($event)">
         </div>
       </mat-card-content>
     </mat-card>
   </div>
 </div>
-<br><br>
-<br><br>
-<br><br>
 <div class="contenedor-secundario">
-  <div class="contenedor">
+  <div class="contenedor" *ngFor="let restaurant of restaurants_2$ | async">
     <mat-card>
       <mat-card-content class="tc">
-        <img class="imgcenter" src="/assets/rest4.png" alt="restaurante4" width="640" height="360">
+        <img class="imgcenter" [src]="restaurant.image" [alt]="restaurant.title" width="540" height="347">
         <br><br>
-        <h1>Xoma Gastronómico</h1>
+        <h1>{{ restaurant.title }}</h1>
         <br>
-        <h2>Restaurante refinado y elegante que ofrece cocina tradicional con un toque moderno, además de cocteles y vino.</h2>
+        <h2>{{ restaurant.description }}</h2>
         <br><br>
         <div class="botones">
-          <button mat-flat-button>Book Now</button>
-          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="100" height="100" (click)="cambiarImagen($event)">
-        </div>
-
-      </mat-card-content>
-
-    </mat-card>
-  </div>
-
-  <div class="contenedor">
-    <mat-card>
-      <mat-card-content class="tc">
-        <img class="imgcenter" src="/assets/rest5.png" alt="restaurante5" width="640" height="371">
-        <br><br>
-        <h1>Osaka Pardo y Aliaga</h1>
-        <br>
-        <h2>Cadena de comedores con gastronomía sofisticada en la que se ofrece cocina fusión asiática y peruana y cocteles.</h2>
-        <br><br><br>
-        <div  class="botones">
-          <button mat-flat-button>Book Now</button>
-          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="100" height="100" (click)="cambiarImagen($event)">
-        </div>
-
-      </mat-card-content>
-
-    </mat-card>
-  </div>
-
-  <div class="contenedor">
-    <mat-card>
-      <mat-card-content class="tc">
-        <img class="imgcenter" src="/assets/rest6.png" alt="restaurante6" width="550" height="390">
-        <br><br>
-        <h1>La Vista Restaurant</h1>
-        <br>
-        <h2>Descubra la deliciosa comida peruana y disfrute de las extraordinarias vistas al océano Pacífico en una de las mejores opciones gastronómicas de Lima.</h2>
-        <br><br>
-        <div class="botones">
-          <button mat-flat-button>Book Now</button>
-          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="100" height="100" (click)="cambiarImagen($event)">
+          <button mat-flat-button (click)="redirectToBooking(restaurant.bookingLink)">Book Now</button>
+          <img class="botonFavorito" src="/assets/favorite.png" alt="botonfavorito" width="70" height="70" (click)="cambiarImagen($event)">
         </div>
       </mat-card-content>
     </mat-card>
@@ -134,4 +55,3 @@
     <br><br>
   </div>
 </footer>
-
