--- a/src/app/components/plan/components/plan-options/plan-options.component.html
+++ b/src/app/components/plan/components/plan-options/plan-options.component.html
@@ -39,7 +39,7 @@
                     <h3>· Tendrá la posibilidad de realizar consultas en las clases de cocina</h3>
                     <h3>· Tendrá la posibilidad de tener 1 tour adicional</h3>
                     <div></div>
-                    <button mat-flat-button color="accent">Conseguir Plan</button>
+                    <button mat-flat-button color="accent" [routerLink]="'/plan-confirm'" routerLinkActive="active">Conseguir Plan</button>
                   </mat-card-content>
                 </mat-card>
               </mat-card-content>
