--- a/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.css
+++ b/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.css
@@ -10,13 +10,30 @@
   height: auto;
   color: black;
 }
+.pagar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
 .text{
   font-size: 1.5em;
   padding: 1px;
 }
-.image{
+.image {
   padding: 10px;
   border-radius: 10px;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+  max-height: 300px;
+  object-fit: cover;
 }
 .boton{
   background-color: #e82574;
