--- a/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
+++ b/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
@@ -20,6 +20,10 @@
  </div>
 </body>
 <footer>
+  <div class="pagar">
+    <button mat-stroked-button [routerLink]="'/tour-payment-confirm'" routerLinkActive="active" class="boton" style="color:white;">Pagar</button>
+  </div>
+  <div>
   <button mat-stroked-button [routerLink]="'/tour-payment'" routerLinkActive="active" class="boton" style="color:white;">Volver</button>
-  <button mat-stroked-button [routerLink]="'/tour-payment-confirm'" routerLinkActive="active" class="boton" style="color:white;">Pagar</button>
+  </div>
 </footer>
