--- a/src/app/components/tours/pages/tour-payment/tour-payment.component.html
+++ b/src/app/components/tours/pages/tour-payment/tour-payment.component.html
@@ -52,7 +52,7 @@
             <p>{{ time }}</p>  <i class='bx bxs-check-circle' style="font-size: 2rem"></i>
           </div>
           <div class="time-down">
-            <p>4 horas</p> <p>$150</p>
+            <p>{{ tour.hours }}</p> <p>$150</p>
           </div>
         </div>
       </ng-container>
