--- a/src/app/components/tours/pages/tour-list/tour-list.component.css
+++ b/src/app/components/tours/pages/tour-list/tour-list.component.css
@@ -7,6 +7,13 @@ body {
   align-items: center;
   height: auto;
 }
+.container2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  margin-top:10px;
+}
 footer{
   position: fixed;
   left: 30px;
