--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,7 @@
       <img mat-card-image src="assets/ComidaCosta.jpg" alt="Comida de la Costa" >
 
       <mat-card-content>
-        <br><div class="container1"><h1>Tour Selva</h1></div>
+        <br><div class="container1"><h1>Tour Costa</h1></div>
         <p>
           Explora la frescura del mar con la brisa en tu rostro y
           el aroma salado que envuelve cada momento.
