--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div>
-      <label for="email1" class="block text-900 font-medium mb-2">Email</label>
+      <label for="email1" class="block text-900 font-medium mb-2">Username</label>
       <input id="email1" name="email"   type="text" pInputText class="w-full mb-3">
 
       <label for="password1" class="block text-900 font-medium mb-2">Password</label>
