--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div>
-      <label class="block text-900 font-medium mb-2">Email</label>
+      <label class="block text-900 font-medium mb-2">Username</label>
       <input id="email" name="email" type="text"   pInputText class="w-full mb-3">
 
       <label for="password1" class="block text-900 font-medium mb-2">Password</label>
