--- a/src/app/components/tours/pages/tour-info/tour-info.component.html
+++ b/src/app/components/tours/pages/tour-info/tour-info.component.html
@@ -52,7 +52,7 @@
     <div class="additional-info">
       <p><i class='bx bxs-group' style="font-size: 4rem"></i> Maximo {{ tour.maxPeople }} personas</p>
       <p><i class='bx bxs-message-rounded-dots' style="font-size: 4rem"></i> {{ tour.language }}</p>
-      <p><i class='bx bxs-time-five' style="font-size: 4rem"></i> {{ tour.duration }} horas </p>
+      <p><i class='bx bxs-time-five' style="font-size: 4rem"></i> Duración {{ tour.duration }} horas </p>
     </div>
   </div>
 
