--- a/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
+++ b/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
@@ -14,7 +14,7 @@
       <h1 class="title2">{{ tour.title }}</h1>
     </div>
     <div>
-      <p class="total">Total: $150</p>
+      <p class="total">Total: ${{ tour.price }}</p>
     </div>
     </div>
  </div>
