--- a/src/app/public/components/header-content/header-content.component.html
+++ b/src/app/public/components/header-content/header-content.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar style="color:#000000" >
-  <img [routerLink]="'/home'" src="assets/LogoTaste1.png" class="logo">
+  <img [routerLink]="'/home'" src="assets/LogoTaste1.png" class="logo" height="179" width="406">
   <div class="spacer"></div>
   <a [routerLink]="'/tour-list'" mat-button>Tours</a>
   <a [routerLink]="'/restaurant-list'" mat-button>Restaurants</a>
