--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,18 +4,18 @@
     <div class="text-center mb-5">
       <img src="assets/LogoTaste1.png" width="300" ><br><br>
       <div class="text-900 text-3xl font-medium mb-3">Create account</div>
-      <a href="login" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Login</a>
+      <a routerLink="/login" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Login</a>
     </div>
 
     <div>
-      <label class="block text-900 font-medium mb-2">Username</label>
-      <input id="email" name="email" type="text"   pInputText class="w-full mb-3">
+      <label for="username" class="block text-900 font-medium mb-2">Username</label>
+      <input id="username" [(ngModel)]="username" type="text" pInputText class="w-full mb-3">
 
-      <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-      <input id="password1" name="password"  type="password" pInputText class="w-full mb-3">
+      <label for="password" class="block text-900 font-medium mb-2">Password</label>
+      <input id="password" [(ngModel)]="password" type="password" pInputText class="w-full mb-3">
 
-
-      <button [routerLink]="'/login'" pButton pRipple label="Register" class="w-full"></button>
+      <button (click)="register()" pButton pRipple label="Register" class="w-full"></button>
+      <div *ngIf="errorMessage" class="text-red-500 mt-2">{{ errorMessage }}</div>
     </div>
   </div>
 </div>
