--- a/src/app/components/tours/pages/tour-list/tour-list.component.html
+++ b/src/app/components/tours/pages/tour-list/tour-list.component.html
@@ -43,6 +43,7 @@
     </mat-card>
   </div>
 </div>
+<button mat-fab color="primary" class="add-tour-button" [routerLink]="'/tour-form'" >+</button>
 </body>
 <footer>
   <button mat-stroked-button [routerLink]="'/home'" routerLinkActive="active" class="boton" style="color:white;">Volver</button>
