--- a/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.css
+++ b/src/app/components/restaurante/page/restaurant-list/restaurant-list.component.css
@@ -9,17 +9,30 @@
   color: white;
 }
 
+.card-restaurant {
+  background-color: #545454;
+  text-align: center;
+  width: 500%;
+  padding: 5px 15px 5px 15px;
+  border-radius: 10px;
+}
+
 .contenedor-principal {
   display: flex;
-}
-.contenedor-secundario {
-  display: flex;
-  margin-top: 10em;
+  width: 70%;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  gap: 2rem;
 }
 .contenedor {
-  width:570px;
-  height:580px;
-  margin-left:  50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 31%;
+  box-sizing: border-box;;
   button{
     height:60px;
     width:200px;
@@ -31,6 +44,7 @@
 }
 .imgcenter{
   border-radius: 02%;
+  width: 100%;
 }
 
 .tc{
