--- a/src/app/components/booking/booking.component.html
+++ b/src/app/components/booking/booking.component.html
@@ -26,7 +26,7 @@
   <ng-container matColumnDef="delete">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button (click)="deleteTour(element.id)">
+      <button mat-icon-button>
         <mat-icon>delete</mat-icon>
       </button>
     </td>
