--- a/src/app/components/tours/pages/tour-info/tour-info.component.html
+++ b/src/app/components/tours/pages/tour-info/tour-info.component.html
@@ -10,12 +10,12 @@
   <div class="first-block">
     <div class="first-child">
       <div class="first-child-up">
-        <h1 class="title">{{ tour.title }}</h1>
+        <h1 class="title">{{ tour.titleTour }}</h1>
       </div>
       <div class="first-child-down">
         <div class="left-column">
           <div class="tour-guide">
-            <p>Con {{ tour.guide }}</p>
+            <p>Con {{ tour.instructor }}</p>
             <div class="stars-and-count">
               <div class="rating">
                 <ng-container *ngFor="let _ of Array(5).fill(0); let i = index">
@@ -76,6 +76,7 @@
   </div>
 </div>
 </div>
+
 </body>
 
 <footer>
