--- a/src/app/components/tours/pages/tour-payment/tour-payment.component.html
+++ b/src/app/components/tours/pages/tour-payment/tour-payment.component.html
@@ -9,13 +9,13 @@
   <div class="first-block">
     <div class="first-child">
       <div class="first-child-up">
-        <h1 class="title">{{ tour.title }}</h1>
+        <h1 class="title">{{ tour.titleTour }}</h1>
       </div>
       <div class="first-child-down">
         <div class="left-column">
           <div class="tour-guide">
             <div class="guide">
-              <p>Con {{ tour.guide }}</p>
+              <p>Con {{ tour.instructor }}</p>
             </div>
             <div class="date">
               <p>{{ tour.date }}</p>
@@ -38,7 +38,7 @@
   </div>
   <div class="second-block">
     <div class="text-d">
-      <p>{{tour.infoDescription}}</p>
+      <p>{{tour.description}}</p>
     </div>
   </div>
   <div class="choose-time">
