--- a/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
+++ b/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
@@ -8,7 +8,7 @@
     <p>Credit/Debit card</p>
     </div>
     <div class="image">
-      <img mat-card-image [src]="tour.image" alt="Tour image">
+      <img mat-card-image [src]="tour.imageTour" alt="Tour image">
     </div>
     <div>
       <h1 class="title2">{{ tour.title }}</h1>
