--- a/src/app/components/tours/pages/tour-info/tour-info.component.html
+++ b/src/app/components/tours/pages/tour-info/tour-info.component.html
@@ -44,7 +44,7 @@
     </div>
     <div class="second-child">
       <div class="image">
-        <img mat-card-image [src]="tour.image" alt="Tour image">
+        <img mat-card-image [src]="tour.imageTour" alt="Tour image">
       </div>
     </div>
   </div>
