--- a/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
+++ b/src/app/components/tours/pages/tour-payment-process/tour-payment-process.component.html
@@ -11,7 +11,7 @@
       <img mat-card-image [src]="tour.imageTour" alt="Tour image">
     </div>
     <div>
-      <h1 class="title2">{{ tour.title }}</h1>
+      <h1 class="title2">{{ tour.titleTour }}</h1>
     </div>
     <div>
       <p class="total">Total: ${{ tour.price }}</p>
