--- a/src/app/components/authentication/login/login.component.css
+++ b/src/app/components/authentication/login/login.component.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("/src/assets/ComidaPeruana.png");
+  background-image: url("/assets/ComidaPeruana.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
