--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -2,30 +2,26 @@
 <div class="container h-screen w-full flex justify-content-center align-items-center">
   <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
     <div class="text-center mb-5">
-      <img src="../../../../assets/LogoTaste1.png" width="300"><br><br>
+      <img src="assets/LogoTaste1.png" width="300" ><br><br>
       <div class="text-900 text-3xl font-medium mb-3">Welcome!</div>
       <span class="text-600 font-medium line-height-3">Don't have an account?</span>
       <a routerLink="/register" class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Register now!</a>
     </div>
 
-    <form [formGroup]="form" (submit)="onSubmit()">
-      <div>
-        <label for="username" class="block text-900 font-medium mb-2">Username</label>
-        <input id="username" formControlName="username" type="text" pInputText class="w-full mb-3"
-               [ngClass]="{'p-invalid': submitted && form.controls['username'].invalid}">
+    <div>
+      <label for="username" class="block text-900 font-medium mb-2">Username</label>
+      <input id="username" [(ngModel)]="username" type="text" pInputText class="w-full mb-3">
 
-        <label for="password" class="block text-900 font-medium mb-2">Password</label>
-        <input id="password" formControlName="password" type="password" pInputText class="w-full mb-3"
-               [ngClass]="{'p-invalid': submitted && form.controls['password'].invalid}">
+      <label for="password" class="block text-900 font-medium mb-2">Password</label>
+      <input id="password" [(ngModel)]="password" type="password" pInputText class="w-full mb-3">
 
-        <div class="flex align-items-center justify-content-between mb-6">
-          <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
-        </div>
-
-        <button pButton pRipple label="Sign In" class="w-full" type="submit"></button>
-        <div *ngIf="form.invalid && submitted" class="text-red-500 mt-2">Please enter valid username and password</div>
+      <div class="flex align-items-center justify-content-between mb-6">
+        <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
       </div>
-    </form>
+
+      <button (click)="login()" pButton pRipple label="Sign In" class="w-full"></button>
+      <div *ngIf="errorMessage" class="text-red-500 mt-2">{{ errorMessage }}</div>
+    </div>
   </div>
 </div>
 </body>
