--- a/src/app/public/components/header-content/header-content.component.html
+++ b/src/app/public/components/header-content/header-content.component.html
@@ -4,7 +4,7 @@
   <a [routerLink]="'/tour-list'" mat-button>Tours</a>
   <a [routerLink]="'/restaurant-list'" mat-button>Restaurants</a>
   <a [routerLink]="'/profile'" mat-button>Perfil</a>
-  <ng-template #authenticated>
-    <span> Welcome, {{currentUserName}}</span> | <button mat-button (click)="onSignOut()"> Log-out </button>
+  <ng-template >
+    <span> Welcome, {{currentUserName}}</span> | <button mat-button> Log-out </button>
   </ng-template>
 </mat-toolbar><br><br><br>
